2006-01-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/dri/dri.c:
	* hw/xfree86/dri/dristruct.h:
	Move drawable lock acquisition into DRIClipNotify from DRIValidateTree,
	so we only take it when clipping a DRI drawable instead of on every
	tree update.  Note drawable lock acquisition per-screen instead of
	globally, and drop it in BlockHandler if necessary.

	* configure.ac:
	* Xprint/Makefile.am:
	* Xprint/ddxInit.c:
	* Xprint/pcl/Makefile.am:
	* Xprint/pcl-mono/Makefile.am:
	* cfb/Makefile.am:
	* cfb/Makefile.am.inc:
	* cfb16/Makefile.am:
	* cfb24/Makefile.am:
	* cfb32/Makefile.am:
	* mi/miinitext.c:
	Bug #5525: Build a working Xprt.  (Drew Parsons)

	* os/access.c:
	Bug #5218: Don't crash on unconfigured interfaces.  (Andrei Barbu)

2006-01-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/loader/misym.c:
	* mi/Makefile.am:
	* mi/mi.h:
	* mi/miclipn.c:
	Remove unused X11R4 DDX compatibility function miClipNotify.

2006-01-03  Eric Anholt  <anholt@FreeBSD.org>

	* render/picture.c: (premultiply):
	Correct rounding in divide-by-255 code.  Obtained from xserver.

2006-01-03  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xgl/xglpict.c: (xglPictureInit):
	Remove the manual AddFilter for convolution, which I'm pretty sure
	shouldn't be necessary due to it already happening from
	PictureSetDefaultFilters.

2006-01-03  Eric Anholt  <anholt@FreeBSD.org>

	* render/glyph.c: (ResetGlyphPrivates),
	(AllocateGlyphPrivateIndex), (AllocateGlyphPrivate),
	(SetGlyphScreenPrivateOffsets), (SetGlyphPrivatePointers),
	(ReallocGlobalGlyphPrivate), (GlyphInit), (GlyphFinishInit),
	(GlyphUninit), (FreeGlyph), (AddGlyph), (AllocateGlyph):
	* render/glyphstr.h:
	* render/miglyph.c: (miRealizeGlyph), (miUnrealizeGlyph):
	* render/mipict.c: (miPictureInit):
	* render/mipict.h:
	* render/picture.c: (PictureCloseScreen), (PictureFinishInit):
	* render/picturestr.h:
	Add glyph privates for Xgl, which uses them to implement a glyph cache.