@@ -1,3 +1,11 @@
+2006-01-08  Adam Jackson  <ajax@freedesktop.org>
+
+	* hw/xfree86/loader/dixsym.c:
+	* include/globals.h:
+	* mi/miinitext.c:
+	* os/utils.c:
+	Remove remaining #ifdef DPSEXT stanzas.
+
 2006-01-06  Adam Jackson  <ajax@freedesktop.org>
 
 	* hw/xfree86/dri/dri.c:
